--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,19 @@
 .App {
   text-align: center;
+  height: auto;
+  width: auto;
+  background-color: #000000;
+  
+  /* background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white; */
 }
+/*
 
 .App-logo {
   height: 40vmin;
@@ -28,6 +41,12 @@
   color: #61dafb;
 }
 
+.container {
+  border: 13px solid black;
+  height: 50%;
+  weight: 50%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +54,59 @@
   to {
     transform: rotate(360deg);
   }
+} */
+.title{
+  font-size: 56px;
+  margin-top: 1rem;
+  font-family: 'Times New Roman', Times, serif;
+  color: #ffffff;
+}
+.wordEntries{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 4rem;
+  margin-bottom: 5rem;
+}
+
+.finalWord{
+  display: flex;
+  flex-direction: row;
+}
+.letters{
+  border: 1px solid #818384;
+  height: 4rem;
+  width: 4rem;
+  margin: 0.6rem;
+}
+
+.keyboard{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.keyRow{
+  display: flex;
+  flex-direction: row;
+  /* align-items: center;
+  justify-content: center; */
+}
+.keys{
+  border: 1px solid black;
+  height: 2.5rem;
+  width: 2.5rem;
+  margin: 0.4rem;
+  font-size: 1.7rem;
+  border-radius: 0.4rem;
+  background-color: #646466;
+}
+
+#enterKey{
+    width: 6.6rem;
+  }
+#backspaceKey {
+   width: 5.6rem;
 }
