--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@
   margin: 0.4rem;
   font-size: 1.7rem;
   border-radius: 0.4rem;
-  background-color: #646466;
+  /* background-color: #646466; */
 }
 
 #enterKey{
